--- a/SchoolManagementMVC/Views/Employees/Create.cshtml
+++ b/SchoolManagementMVC/Views/Employees/Create.cshtml
@@ -6,9 +6,8 @@
 
 <h2>Create</h2>
 
-<h4 class="text-danger">@ViewBag.Error</h4>
 
-@using (Html.BeginForm("Create", "Employees", FormMethod.Post, new { enctype = "multipart/form-data"}))
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
@@ -99,16 +98,16 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file" })
+                @*@Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file"})
+                @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.DocumentTypeID, "DocumentTypeID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("DocumentTypeID", null, htmlAttributes: new { @class = "form-control" })*@
-                @*@Html.DropDownListFor(m => m.DocumentTypeID, new List<SelectListItem>(), "-Please select-", htmlAttributes: new { @class = "form-control" } )*@
-                @Html.EditorFor(model => model.DocumentTypeID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.DropDownList("DocumentTypeID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DocumentTypeID, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -118,6 +117,30 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.DocumentNumber, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.DocumentNumber, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StateID, "StateID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("StateID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StateID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PositionID, "PositionID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("PositionID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.PositionID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Remarks, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Remarks, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Remarks, "", new { @class = "text-danger" })
             </div>
         </div>
 
