--- a/SchoolManagementMVC/Views/Employees/Delete.cshtml
+++ b/SchoolManagementMVC/Views/Employees/Delete.cshtml
@@ -20,6 +20,22 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Positions.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Positions.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.State.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.State.Description)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
@@ -113,6 +129,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.DocumentNumber)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Remarks)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Remarks)
         </dd>
 
     </dl>
