Solucionando error en el crud de empleados

--- a/SchoolManagementMVC/Views/Employees/Delete.cshtml
+++ b/SchoolManagementMVC/Views/Employees/Delete.cshtml
@@ -108,11 +108,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.salary)
+            @Html.DisplayNameFor(model => model.Salary)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.salary)
+            @Html.DisplayFor(model => model.Salary)
         </dd>
 
         <dt>
