--- a/SchoolManagementMVC/Views/Employees/Index.cshtml
+++ b/SchoolManagementMVC/Views/Employees/Index.cshtml
@@ -50,7 +50,7 @@
                     @Html.DisplayNameFor(model => model.EndTime)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.salary)
+                    @Html.DisplayNameFor(model => model.Salary)
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.ImageUrl)
@@ -105,7 +105,7 @@
                         @Html.DisplayFor(modelItem => item.EndTime)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelItem => item.salary)
+                        @Html.DisplayFor(modelItem => item.Salary)
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.ImageUrl)
