--- a/SchoolManagementMVC/Content/Custom.css
+++ b/SchoolManagementMVC/Content/Custom.css
@@ -1,3 +1,18 @@
 ﻿body {
+    background: #f3f3f3;
     font-family: 'Raleway', sans-serif !important;
+}
+
+.containerWhite {
+    background: #fff;
+    padding: 21px;
+    margin-top: 2%;
+    border-radius: 12px;
+}
+
+.profilePic {
+    width:100px;
+    height:100px;
+    max-width:100%;
+    height:auto;
 }
