--- a/SchoolManagementMVC/Views/Students/Delete.cshtml
+++ b/SchoolManagementMVC/Views/Students/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model SchoolManagementMVC.Models.Employee
+﻿@model SchoolManagementMVC.Models.Student
 
 @{
-    ViewBag.Title = "Detalles";
+    ViewBag.Title = "Delete";
 }
 
-    <h2>Detalles de Empleado</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Empleado - @Html.DisplayNameFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h4>
+    <h4>Student</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -16,6 +17,14 @@
 
         <dd>
             @Html.DisplayFor(model => model.DocumentType.Description)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Gender.Description)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Gender.Description)
         </dd>
 
         <dt>
@@ -107,22 +116,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Salary)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Salary)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.ImageUrl)
         </dt>
 
         <dd>
-            @if (!string.IsNullOrEmpty(Model.ImageUrl))
-            {
-                <img src="@Url.Content(Model.ImageUrl)" alt="@Html.DisplayFor(modelItem => Model.FirstName)" class="img-responsive img-rounded profilePic" />
-            }
+            @Html.DisplayFor(model => model.ImageUrl)
         </dd>
 
         <dt>
@@ -142,8 +140,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeID }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
