--- a/SchoolManagementMVC/Views/Students/Edit.cshtml
+++ b/SchoolManagementMVC/Views/Students/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolManagementMVC.Models.EmployeeView
+﻿@model SchoolManagementMVC.Models.Student
 
 @{
     ViewBag.Title = "Edit";
@@ -7,15 +7,15 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm("Edit", "Employee", FormMethod.Post, new { enctype = "multipart/form-data"}))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Employee</h4>
+        <h4>Student</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.EmployeeID)
+        @Html.HiddenFor(model => model.StudentID)
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -90,18 +90,9 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Salary, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Salary, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Salary, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file" })
+                @Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -135,6 +126,14 @@
             <div class="col-md-10">
                 @Html.DropDownList("PositionID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.PositionID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.GenderID, "GenderID", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("GenderID", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.GenderID, "", new { @class = "text-danger" })
             </div>
         </div>
 
