Fixing model error for all models

--- a/SchoolManagementMVC/Views/Employees/Edit.cshtml
+++ b/SchoolManagementMVC/Views/Employees/Edit.cshtml
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm("Edit", "Employee", FormMethod.Post, new { enctype = "multipart/form-data"}))
+@using (Html.BeginForm("Edit", "Employees", FormMethod.Post, new { enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
     
