--- a/SchoolManagementMVC/Views/Parents/Index.cshtml
+++ b/SchoolManagementMVC/Views/Parents/Index.cshtml
@@ -18,6 +18,9 @@
             @Html.DisplayNameFor(model => model.Gender.Description)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Student.FirstName)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.FirstName)
         </th>
         <th>
@@ -48,6 +51,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Gender.Description)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Student.FirstName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.FirstName)
