--- a/SchoolManagementMVC/Views/Students/Details.cshtml
+++ b/SchoolManagementMVC/Views/Students/Details.cshtml
@@ -11,14 +11,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.DocumentType.Description)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DocumentType.Description)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Gender.Description)
         </dt>
 
@@ -123,19 +115,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DocumentNumber)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DocumentNumber)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Remarks)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.Remarks)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.AttachedFiles)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.AttachedFiles)
         </dd>
 
     </dl>
