Working on upload files in students

--- a/SchoolManagementMVC/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementMVC/Views/Shared/_Layout.cshtml
@@ -39,6 +39,8 @@
                             <li>@Html.ActionLink("Cursos", "Index", "Courses")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Genero", "Index", "Genders")</li>
+                            <li role="separator" class="divider"></li>
+                            <li>@Html.ActionLink("Subida de Archivos", "Index", "UploadFiles")</li>
                         </ul>
                     </li>
                     <li><a href="#">Finanzas</a></li>
