--- a/SchoolManagementMVC/Views/Students/Create.cshtml
+++ b/SchoolManagementMVC/Views/Students/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolManagementMVC.Models.Student
+﻿@model SchoolManagementMVC.Models.StudentView
 
 @{
     ViewBag.Title = "Create";
@@ -7,7 +7,7 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm("Create", "Students", FormMethod.Post, new { enctype = "multipart/form-data"})) 
 {
     @Html.AntiForgeryToken()
     
@@ -90,7 +90,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file" })
                 @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -124,14 +125,6 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Remarks, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Remarks, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AttachedFiles, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AttachedFiles, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttachedFiles, "", new { @class = "text-danger" })
             </div>
         </div>
 
