--- a/SchoolManagementMVC/Content/Custom.css
+++ b/SchoolManagementMVC/Content/Custom.css
@@ -1,6 +1,6 @@
 ﻿body {
     background: #f3f3f3;
-    font-family: 'Raleway', sans-serif !important;
+    /*font-family: 'Raleway', sans-serif !important;*/
 }
 
 .containerWhite {
