--- a/SchoolManagementMVC/Views/Students/Create.cshtml
+++ b/SchoolManagementMVC/Views/Students/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolManagementMVC.Models.StudentView
+﻿@model SchoolManagementMVC.Models.Student
 
 @{
     ViewBag.Title = "Create";
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm("Create", "Students", FormMethod.Post, new { enctype = "multipart/form-data"})) 
+@using (Html.BeginForm("Create", "Students", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Student</h4>
         <hr />
@@ -88,15 +88,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file" })
-                @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.StateID, "StateID", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("StateID", null, htmlAttributes: new { @class = "form-control" })
@@ -117,6 +108,20 @@
             <div class="col-md-10">
                 @Html.DropDownList("GenderID", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.GenderID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Profile Pic</label>
+            <div class="col-md-10">
+                <input type="file" name="ImageUrl" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label class="control-label col-md-2">Attach File</label>
+            <div class="col-md-10">
+                <input type="file" name="file" class="form-control" multiple="multiple" />
             </div>
         </div>
 
