Working on Student Phto profile

--- a/SchoolManagementMVC/Views/UploadFiles/Delete.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Delete.cshtml
@@ -27,6 +27,14 @@
             @Html.DisplayFor(model => model.Students.FirstName)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Summary)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Summary)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
