--- a/SchoolManagementMVC/Views/Students/Delete.cshtml
+++ b/SchoolManagementMVC/Views/Students/Delete.cshtml
@@ -108,6 +108,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.ImageUrl)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ImageUrl)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Remarks)
         </dt>
 
