--- a/SchoolManagementMVC/Views/UploadFiles/Details.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Details.cshtml
@@ -26,9 +26,17 @@
             @Html.DisplayFor(model => model.Students.FirstName)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Summary)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Summary)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.UploadingFileID }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.UploadFileID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
