--- a/SchoolManagementMVC/Views/UploadFiles/Edit.cshtml
+++ b/SchoolManagementMVC/Views/UploadFiles/Edit.cshtml
@@ -15,7 +15,15 @@
         <h4>UploadFile</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.UploadingFileID)
+        @Html.HiddenFor(model => model.UploadFileID)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Summary, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Summary, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Summary, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.StudentID, "StudentID", htmlAttributes: new { @class = "control-label col-md-2" })
