Working in a Crud and Erollment Method

--- a/SchoolManagementMVC/Views/Shared/_Layout.cshtml
+++ b/SchoolManagementMVC/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title - School Management</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="https://bootswatch.com/3/flatly/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://bootswatch.com/3/readable/bootstrap.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700,700i&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="~/Content/Custom.css" rel="stylesheet"/>
@@ -37,6 +37,7 @@
                             <li>@Html.ActionLink("Estados", "Index", "States")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Cursos", "Index", "Courses")</li>
+                            <li>@Html.ActionLink("Inscripciones", "Index", "Enrollments")</li>
                             <li role="separator" class="divider"></li>
                             <li>@Html.ActionLink("Genero", "Index", "Genders")</li>
                             <li role="separator" class="divider"></li>
