--- a/SchoolManagementMVC/Content/Custom.css
+++ b/SchoolManagementMVC/Content/Custom.css
@@ -1,6 +1,9 @@
-﻿body {
+﻿* {
+    font-family: 'Raleway', sans-serif !important;
+}
+
+body {
     background: #f3f3f3;
-    /*font-family: 'Raleway', sans-serif !important;*/
 }
 
 .containerWhite {
