--- a/SchoolManagementMVC/Views/Students/Edit.cshtml
+++ b/SchoolManagementMVC/Views/Students/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SchoolManagementMVC.Models.Student
+﻿@model SchoolManagementMVC.Models.StudentView
 
 @{
     ViewBag.Title = "Edit";
@@ -7,7 +7,7 @@
 <h2>Edit</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Students", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -92,7 +92,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.ImageUrl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.ImageUrl, new { htmlAttributes = new { @class = "form-control" } })*@
+                @Html.TextBoxFor(modelo => modelo.ImageUrl, new { type = "file", @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ImageUrl, "", new { @class = "text-danger" })
             </div>
         </div>
